--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.application.name=spring-la-mia-pizzeria-crud
 
 # data source
-spring.datasource.url=jdbc:mysql://localhost:3306/pizze
+spring.datasource.url=jdbc:mysql://localhost:3306/pizzeria
 spring.datasource.username=root
 spring.datasource.password=Bidede09#
 
-##Hibernate properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #Hibernate ddl auto (create, create-drop, validate, update, none)
 spring.jpa.hibernate.ddl-auto=create
